fix overflow scroll on team/instances

--- a/src/apps/blueprints/src/views/main/Blueprints.less
+++ b/src/apps/blueprints/src/views/main/Blueprints.less
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
-  overflow-y: scroll;
-  height: 86vh;
+  height: calc(100vh - 44px - 4rem);
+
   .BlueprintsTitle {
     font-size: 1.8rem;
     margin: 0 0 1rem 0;
