--- a/src/apps/teams/src/components/TeamCard/TeamCard.less
+++ b/src/apps/teams/src/components/TeamCard/TeamCard.less
@@ -15,7 +15,6 @@
 
   .CardContent {
     margin: 1rem 0;
-    overflow-y: scroll;
     position: relative;
 
     .Settings {
