--- a/src/apps/teams/src/components/TeamsGrid/TeamsGrid.less
+++ b/src/apps/teams/src/components/TeamsGrid/TeamsGrid.less
@@ -2,8 +2,6 @@
 
 .TeamsView {
   padding: 2rem;
-  height: 86vh;
-  overflow-y: scroll;
 
   .TeamsTitle {
     font-size: 1.8rem;
